# panto_face_recognition_freh

./: .gitignore  README.md  change.md  readme2.md  recorte.py
docker/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  enter.sh  run.sh  run_Dockerfile.sh  run_container_gui_gpu.sh
docker copy/: Dockerfile  README.md  docker-entrypoint.sh
docker copy/test/: CMakeLists.txt  verify_all.sh
docker/test/: CMakeLists.txt  test_all.cpp  test_all.py  verify_all.sh
docker_c20/: Dockerfile  enter.sh  readme.md  requirements.txt  run.sh  run_container_gui_gpu.sh
docker_jetpack/: Dockerfile  README.md  docker-entrypoint.sh
docker_jetpack/test/: test_all.cpp  verify_all.sh
system/: CMakeLists.txt  README.md  TEST_SUMMARY.md  arquitecture.md  benchmark.sh  build.sh  clean.sh  config.toml  main.cpp  models.md  run.sh  run_build.sh  setup_cuda_files.sh
system/config/: config_1080p_full.toml  config_1080p_roi.toml  config_4k.toml  config_720p.toml
system/configs/: config.toml  config_1080p_full.toml  config_1080p_roi.toml  config_1440p.toml  config_4k.toml  config_720p.toml
system/database/: read-database.py
system/include/: age_gender_predictor.hpp  config.hpp  cuda_kernels.h  detector.hpp  detector_optimized.hpp  draw_utils.hpp  emotion_recognizer.hpp  face_database.hpp  face_db_manager.hpp  face_logger.hpp  face_logger_sqlite.hpp  model_validator.hpp  recognizer.hpp  stream_capture.hpp  tensorrt_logger.hpp  tracker.hpp  utils.hpp  vector_index.hpp
system/include/database/: face_db_manager.hpp  thread_pool.hpp
system/include/detection/: detector_optimized.hpp
system/include/recognition/: age_gender_predictor.hpp  emotion_recognizer.hpp  recognizer.hpp
system/include/tracking/: tracker.hpp
system/include/validation/: model_validator.hpp
system/models/: README.md  convert_onnx_auto.cpp  convert_onnx_to_trt.cpp  convert_to_tensorrt.py  convert_to_tensorrt.sh  install_models.py  install_models.sh  models_urls.json  onnx64_fixed_onnx32.py  run_convert_onnx_auto.sh  setup_models.sh  setup_models_2.sh
system/models/engine/: run_verify_engine.sh  verify_engine.cpp
system/models/engines/: verify_engine.cpp
system/src/: age_gender_predictor.cpp  cuda_kernels.cu  detector.cpp  detector_optimized.cpp  draw_utils.cpp  emotion_recognizer.cpp  face_database.cpp  face_db_manager.cpp  recognizer.cpp  stream_capture.cpp  thread_pool.cpp  tracker.cpp  utils.cpp  vector_index.cpp
system/src/core/: draw_utils.cpp  utils.cpp
system/src/database/: face_database.cpp  face_db_manager.cpp  thread_pool.cpp  vector_index.cpp
system/src/detection/: cuda_kernels.cu  detector_optimized.cpp
system/src/recognition/: age_gender_predictor.cpp  emotion_recognizer.cpp  recognizer.cpp
system/src/streaming/: stream_capture.cpp
system/src/tracking/: tracker.cpp
system/test/: benchmark_detector.cpp  diagnose_retinaface.cpp  record.cpp  record_view.cpp  rtsp.cpp  test_detector.cpp  test_detector_video.cpp  test_onnx.py  test_recognizer.cpp  test_validator .cpp  test_validator.cpp  view.cpp
system/tools/: compare_embeddings.cpp  compare_embeddings_fixed.cpp  query_faces.cpp
test/: CMakeLists.txt
test/cuda/: check_cuda.cpp  run_check_cuda.sh
test/json/: send_json.cpp
test/rtsp/: CMakeLists.txt  create_build.sh
test/rtsp/src/: record_video.cpp  rtsp.cpp  stream_viewer.cpp  stream_viewer.hpp  utils.cpp  utils.hpp
test/src/: record_video.cpp  rtsp.cpp  rtsp_main.cpp  rtsp_main_sub.cpp  rtsp_sub.cpp  stream_viewer.cpp  stream_viewer.hpp  utils.cpp  utils.hpp
test/version/: CMakeLists.txt  check_cpp_version.cpp
